fix bug of overflow

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -48,6 +48,8 @@ footer h3{
 footer a{
   font-size: 1.5rem;
   margin-right: 0.5rem;
+
+  text-decoration: none;
 }
 
 footer a:nth-child(1) {
